--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
     "next-intl": "^4.0.2",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
@@ -30,6 +29,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "typescript": "^5"
   }
